# piano

./: .env  .gitignore  README.md  global.css  index.2f03672b.js  index.2f03672b.js.map  index.6c2b4b8b.js  index.6c2b4b8b.js.map  index.a9d8089c.css  index.a9d8089c.css.map  index.b75805dc.css  index.b75805dc.css.map  index.html  loadtest.html  package.json  pnpm-lock.yaml
assets/: index-0-PfohWa.js  index-047ae658.js  index-087ef758.js  index-1098b0de.js  index-17c20eda.js  index-19635d42.js  index-1YOABWDf.js  index-1ca42df2.css  index-23250048.js  index-285f4197.js  index-3312bc96.js  index-34c30928.js  index-3e385ca4.js  index-4c96d296.js  index-4e24e3d8.js  index-52b3b007.js  index-5721574f.css  index-5b9c03a8.js  index-5cea40d0.js  index-66151983.js  index-694fefcf.js  index-6d6f0d57.js  index-70df1fbd.js  index-7375667a.css  index-81acd91f.css  index-857da09a.js  index-8a4a1eed.js  index-8c2e3d20.js  index-8cb42229.css  index-9f273070.js  index-B2SCfxQ0.js  index-BCqEOzOM.js  index-BaxWbX7E.js  index-BeP4aV2L.js  index-BglG_R6B.js  index-BklFyfYS.js  index-Bktr4MLn.js  index-Bo4tVJ34.js  index-C1rqP_8u.js  index-CDhLLjV8.js  (+51 more)
backend/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose-prod.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: client.rs  index.ts  instrument_names.ts  lib.rs  main.rs  schema.proto  socket_events.ts  websocket.rs
frontend/: .env  .env-sample  README.md  index.html  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  vite.config.js
src/: index.ts  instrument_names.ts  (+1 more)
(+41 files in other folders)
