[package]
name = "piano-backend"
version = "0.0.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
env_logger = "0.11"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
log = "0.4"
anyhow = "1.0.86"
rand = "0.8.5"
dotenvy = "0.15.7"
