[package]
name = "piano-backend"
version = "0.0.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
log = "0.4"
anyhow = "1"
rand = "0.9"
ts-rs = "10"
rmp-serde = "1"
